# llm-playbooks

./: .gitignore  .pre-commit-config.yaml  CH2_FasttextClassifieripynb.ipynb  Ch2_Cosmopedia.ipynb  Loading_LLMs_Basic.ipynb  README.md  chess_tokenizer.json  exercise-43-44.ipynb  exercise_16.ipynb  exercise_17.ipynb  pyproject.toml  requirements.txt  setup.py
Chapter1/: ChatwithyourPDF.ipynb  README.md  app_gradio.py  requirements.txt  streamlit.py
Chapter10/: Chapter_10_1.ipynb  Chapter_10_2.ipynb  Chapter_10_3.ipynb  Chapter_10_4.ipynb  Chapter_10_5.ipynb
Chapter9/: quantization_experiment.py  quantization_llama3.py
llm_playbooks/: exercise_39.ipynb  exercise_60.ipynb  hello.py
llm_playbooks/Chapter11/: negation_aware.ipynb
llm_playbooks/Chapter12/: flare-experiment.ipynb  soccer_player.ipynb
llm_playbooks/Chapter9/: llama_quantization.ipynb  quantization_analysis.ipynb
notebooks/: Inference_Text_Summarization_Metrics.ipynb  Loading_LLMs_Basic.ipynb  Loading_Models_with_BnB_in_Colab_Free_Tier.ipynb  fine_tune_skeleton.ipynb  load_inference_llms.ipynb  test.ipynb
presentations/: LLM Agent Architectures.pptx
projects/chesslm/: .gitignore  pyproject.toml
projects/chesslm/chesslm/: gpt.py  lichess.py  tokenizer.py
projects/chesslm/notebooks/: data.ipynb  gpt2.ipynb  save_data.ipynb  tokenization.ipynb  train_chesslm.ipynb  train_shakespeare.ipynb
projects/finetune_gemma_2b/: finetune_gemma_2b.ipynb  medqa_data.py
projects/finetune_tutorial/: medqa_data.py  requirements.txt  tutorial.ipynb  tutorial_2b.ipynb
projects/getting_started/: Inference_Text_Summarization_Metrics.ipynb  finetune_gemma_2b.ipynb
projects/getting_started/colab/: Library_Installation.ipynb  Loading_LLMs_Basic.ipynb  Loading_Models_with_BnB_in_Colab_Free_Tier.ipynb
projects/hello_poetry/: README.md  pyproject.toml
projects/hello_poetry/hello_poetry/: hello.py
projects/hello_poetry/hello_poetry/notebooks/: hello_poetry.ipynb
projects/tmls_workshop/: TMLS Workshop - Final.pptx  eleuther_lm_harness_demo.ipynb  fine_tune_skeleton.ipynb  load_inference_llms.ipynb
src/llm_playbooks/: __init__.py
src/llm_playbooks/utils/: colab.py
tmls_workshop/: eleuther_lm_harness_demo.ipynb
