[tool.poetry]
name = "hello-poetry"
version = "0.1.0"
description = "Poetry Template"
authors = ["John Doe <john.doe@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
