[tool.poetry]
name = "hello-poetry"
version = "0.1.0"
description = "Poetry Template"
authors = ["John Doe <john.doe@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llm_playbooks = { path = "../../", develop = true }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
ipython = "^8.25.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
